[package]
name = "base116_cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.86"
description = "CLI binary for crate base116"
repository = "https://github.com/ParkSnoopy/base116_cli"
license = "AGPL-3.0-or-later"
keywords = ["cli", "encode", "decode", "base64", "base85"]

[dependencies]
base116 = "0.1"
clap = { version = "4.5", features = ["derive"] }
clio = { version = "0.3", features = ["clap-parse"] }

[[bin]]
name = "base116"
path = "src/main.rs"
